Decode of SETCLIENTID calls fails with STATUS_ACCESS_VIOLATION
This issue was migrated from bug 5209 in our old bug tracker.
Original bug information:
Reporter: Cal Turney
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: Other
Version: 1.5.x (Experimental)
Attachments:
change-guint8-to-guint16.patch: Patch of packet-nfs.c to declare b1-b10 as guint16
setclientid-bug-in-3079.cap.gz: Capture containing a SETCLIENTID call that fails
change-guint8-to-guint16-abd_remove-hh.patch: Updated patch with all 'hh' modifiers removed